--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ SECRET_KEY=my_super_secret_key
 DEBUG=True
 
 # PG admin
+PGADMIN_PORT=5050
 PGADMIN_DEFAULT_EMAIL=admin@promptforge.io
 PGADMIN_DEFAULT_PASSWORD=admin123
