--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   lint:
+    name: Lint PromptForge App
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,8 +29,9 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   test:
+    name: Test PromptForge App
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: lint
     steps:
       - uses: actions/checkout@v4
 
@@ -95,13 +97,15 @@ jobs:
       - name: Compress project files
         run: |
           echo "📦 Compressing project files..."
-          tar --exclude='.git' -czf promptforge.tar.gz .
+          sudo mkdir -p /temp
+          sudo cp -r * /temp/
+          tar --exclude='.git' --exclude='ssh_deploy_key' -czf promptforge.tar.gz /temp
 
       - name: Copy project to server
         run: |
           echo "🚀 Copying project archive to remote server..."
           scp -i ssh_deploy_key -o StrictHostKeyChecking=no promptforge.tar.gz \
-            ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:/tmp/promptforge.tar.gz
+            ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:/tmp/
 
       - name: Deploy PromptForge on remote server
         run: |
@@ -133,4 +137,4 @@ jobs:
 
       - name: Cleanup local artifacts
         run: |
-          rm -f ssh_deploy_key promptforge.tar.gz
+          rm -f ssh_deploy_key /tmp/promptforge.tar.gz
