--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
   deploy:
     name: Deploy with Terraform
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
 
     steps:
       - name: Checkout code
