--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [main, terraform]
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -76,7 +76,7 @@ jobs:
   deploy:
     name: Deploy with Terraform
     runs-on: ubuntu-latest
-    # needs: test
+    needs: test
 
     steps:
       - name: Checkout code
