feat(monitoring): add Prometheus and Grafana for application monitoring
- Integrate django-prometheus for Django metrics collection
- Add Prometheus configuration and Grafana dashboard for visualizing metrics
- Update docker-compose.yml with monitoring services (Prometheus, postgres_exporter, Grafana)
- Include API documentation and Postman collection for testing
- Update README.md with monitoring setup and environment variables
- Add Grafana credentials to .env.example

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ DEBUG=True
 PGADMIN_PORT=5050
 PGADMIN_DEFAULT_EMAIL=admin@promptforge.io
 PGADMIN_DEFAULT_PASSWORD=admin123
+
+# Grafana
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin123
