--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
         #   terraform_version: 1.13.4
 
       - name: Terraform Init & Apply
+        if: false
         run: |
           cd terraform
           # Initialize Terraform providers and modules
